<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backk"
        />
    <EditText
        android:id="@+id/etCourseName"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:hint="@string/course_name" />

    <EditText
        android:id="@+id/etCourseDescription"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/course_description" />

    <EditText
        android:id="@+id/etCourseType"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/course_type" />

    <!-- Button to select PDF file --> <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSelectPdf"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/green"
        android:text="@string/select_pdf"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/green"
        android:text="@string/enregistrer"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>
