<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF1F1"
    tools:context="com.iset.tp7.Auth.activity_register">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="420dp"
        android:layout_height="217dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="222dp"
        android:layout_height="84dp"
        android:text="@string/hi_ncreate_account"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="603dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.758">

        <TextView
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname"

            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:hint="Enter your First Name"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Last Name"

            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:hint="Enter your LastName"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"

            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:hint="Enter your Email"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView91"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number"

            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:hint="Enter your Phone Number"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"

            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerRole"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittextbackground"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />


        <TextView
            android:id="@+id/btnGoToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="You already Have an account? Login now!"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnRegister"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/green"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
